--- a/layers/aeroway/mapping.yaml
+++ b/layers/aeroway/mapping.yaml
@@ -16,6 +16,12 @@ generalized_tables:
     source: aeroway_polygon
     sql_filter: area>power(ZRES12,2)
     tolerance: ZRES13
+
+ref_field: &ref
+  key: ref
+  name: ref
+  type: string
+
 tables:
   # etldoc: imposm3 -> osm_aeroway_polygon
   aeroway_polygon:
